// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gallery [Gallery - disabled: false] Component basic tests matches the snapshot 1`] = `
<styled.div>
  <Component
    disabled={false}
    imageIdx={0}
    key="giphy_id"
    responsivePicture={
      Object {
        "alt": "title",
        "defaultImgSrc": "http://example.com.not/image.jpg",
        "responsiveSrcList": Array [
          Object {
            "media": "(min-width: 600px)",
            "src": undefined,
          },
        ],
      }
    }
  />
</styled.div>
`;

exports[`Gallery [Gallery - disabled: true] Component basic tests matches the snapshot 1`] = `
<styled.div>
  <Component
    disabled={true}
    imageIdx={0}
    key="giphy_id"
    responsivePicture={
      Object {
        "alt": "title",
        "defaultImgSrc": "http://example.com.not/image.jpg",
        "responsiveSrcList": Array [
          Object {
            "media": "(min-width: 600px)",
            "src": undefined,
          },
        ],
      }
    }
  />
</styled.div>
`;

exports[`Gallery [empty Gallery - disabled: false] Component basic tests matches the snapshot 1`] = `<styled.div />`;

exports[`Gallery [empty Gallery - disabled: true] Component basic tests matches the snapshot 1`] = `<styled.div />`;
